# ROCm-docker-with-controller

./: README.md
.devcontainer/: Dockerfile  Dockerfile.experiment-runner-centos7  Dockerfile.experiment-runner-ubuntu20.04  Dockerfile.frequency-regulator-centos7  Dockerfile.gpu-workloads-remote-rocm  Dockerfile.mlc-llm-ubuntu  Dockerfile.power-broadcaster  Dockerfile.remote-rocm-ubuntu  Dockerfile.remote-rocr5.7.1-ubuntu  Dockerfile.rocm5.7.1-ubuntu20.04  Dockerfile.torch2.1.1-rocm5.7.1-ubuntu  Dockerfile.tvm-torch-remote-rocm  README.md  attach_cotainer.sh  build_image.sh  build_images.sh  docker-compose.yaml  docker-compose.yml_  run_image.sh  stop_container.sh
controller/: CMakeLists.txt
controller/include/: controller.hpp  resource_controller.hpp
controller/scripts/: controller-init-d  debug_wait.sh  setup_service.sh  start_service.sh
controller/src/: controller.cpp  main.cpp  master.cpp  resource_controller.cpp
profiler/: CMakeLists.txt  build_master.sh  local_runner.py  master.cpp  plot.py  profile.sh  remote_runner.py
scripts/docker/: attach_container.sh  build_images.sh  clean_logs.sh  env_setup.sh  run_image.sh  stop_image.sh
scripts/experiment_runner/: experiment_runner_remote.py  experiment_runner_target.py
scripts/frequency_regulator_power_cap/: frequency_regulator.py  requirements.txt
scripts/frequency_regulator_power_cap/controller/: controller.py
scripts/frequency_regulator_power_cap/data/: example_lc_trace.txt  lmpE.npy  lmpRD.npy  lmpRU.npy  trace_fb_1_1.txt  trace_fb_1_2.txt  trace_fb_2_1.txt  trace_fb_2_2.txt  trace_step5_max40.txt  trace_step5_max60.txt  trace_step5_max80.txt
scripts/frequency_regulator_power_cap/power_model_tools/: fr_optimizer.py  plot_be_profile.py  power_model.py  requirements.txt
scripts/frequency_regulator_power_cap/regulation_signal_tools/: regulation_signal_sampler.py
scripts/utils/experiment_runner/: experiment_runner.py  experiment_runner_remote.py  experiment_runner_target.py  requirements.txt
scripts/utils/power_broadcaster/: cpu_power_monitor.py  gpu_power_monitor.py  power_broadcaster.py  power_broadcaster_test.py
workloads/: clone_workloads.sh
(+23 files in other folders)
